# capsule

./: .gitignore  README.md
core/: Cargo.toml
core/src/: macros.rs
core/src/ffi/: dpdk.rs  mod.rs
core/src/packets/: arp.rs  checksum.rs  ethernet.rs  mbuf.rs  mod.rs  tcp.rs  types.rs  udp.rs
core/src/packets/icmp/: mod.rs
core/src/packets/icmp/v4/: echo_reply.rs  echo_request.rs  mod.rs  redirect.rs  time_exceeded.rs
core/src/packets/icmp/v6/: echo_reply.rs  echo_request.rs  mod.rs  time_exceeded.rs  too_big.rs  unreachable.rs
core/src/packets/icmp/v6/ndp/: neighbor_advert.rs  neighbor_solicit.rs  redirect.rs  router_advert.rs  router_solicit.rs
core/src/packets/ip/: mod.rs  v4.rs
core/src/packets/ip/v6/: fragment.rs  mod.rs  srh.rs
core/src/runtime/: config.rs  lcore.rs  mempool.rs  mod.rs  pcap_dump.rs  port.rs  port_metrics.rs
core/src/testils/: mod.rs
examples/kni/: Cargo.toml  kni.toml  main.rs
examples/nat64/: Cargo.toml  main.rs  nat64.toml
examples/ping4d/: Cargo.toml  main.rs  ping4d.toml
examples/pktdump/: Cargo.toml  main.rs  pktdump.toml
examples/syn-flood/: Cargo.toml  main.rs
ffi/: Cargo.toml  build.rs
ffi/src/: lib.rs
macros/src/: derive_packet.rs
